--- a/template (2).Rmd
+++ b/template (2).Rmd
@@ -19,7 +19,7 @@ library(tidyverse)
 
 I want to import `FAS_litters.csv`
 ```{r}
-litters_df=read_csv("data_import_examples/FAS_litters.csv")
+litters_df=read_csv("FAS_litters.csv")
 ```
 ```{r}
 names(litters_df)
@@ -27,4 +27,21 @@ litters_df=janitor:: clean_names(litters_df)
 ```
 ```{r}
 litters_df
+head(litters_df)
 ```
+
+#Arguments in `read.csv`
+```{r}
+litters_data = read_csv(file = "./FAS_litters.csv",
+  col_types = cols(
+    Group = col_character(),
+    `Litter Number` = col_character(),
+    `GD0 weight` = col_double(),
+    `GD18 weight` = col_double(),
+    `GD of Birth` = col_integer(),
+    `Pups born alive` = col_integer(),
+    `Pups dead @ birth` = col_integer(),
+    `Pups survive` = col_integer()
+  )
+)
+  ```
